--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <button type="submit">Adicionar Gasto</button>
       </form>
   
-      <h2>Gastos:</h2>
+      <h2>Insira seu gasto diário:</h2>
       <table id="tabela-gastos">
         <thead>
           <tr>
             <th>Descrição</th>
-            <th>Valor (R$)</th>
+            <th>Valor</th>
             <th>Categoria</th>
             <th>Ações</th>
           </tr>
