Chamando java script para guardar os dados da tabela

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Calculadora de Gastos Mensais</h1>
 
-    <form id="form-gasto">
+    <form id="formulario-gasto">
         <input type="text" id="descricao" placeholder="Descrição" required />
         <input type="number" id="valor" placeholder="Valor" step="0.01" required />
         <input type="text" id="categoria" placeholder="Categoria" required />
