--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <div class="container">
     <h1>Calculadora de Gastos Mensais</h1>
 
-    <form id="formulario-gasto">
+    <form id="form-gasto">
         <input type="text" id="descricao" placeholder="Descrição" required />
         <input type="number" id="valor" placeholder="Valor" step="0.01" required />
-        <input type="text" id="categoria" placeholder="Categoria" required />
+        <input type="text" id="categoria" placeholder="Categoria (ex: alimentação)" required />
         <button type="submit">Adicionar Gasto</button>
       </form>
   
-      <h2>Insira seu gasto diário:</h2>
+      <h2>Gastos:</h2>
       <table id="tabela-gastos">
         <thead>
           <tr>
             <th>Descrição</th>
-            <th>Valor</th>
+            <th>Valor (R$)</th>
             <th>Categoria</th>
             <th>Ações</th>
           </tr>
