Adicionado botão de edição

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form id="form-gasto">
         <input type="text" id="descricao" placeholder="Descrição" required />
         <input type="number" id="valor" placeholder="Valor" step="0.01" required />
-        <input type="text" id="categoria" placeholder="Categoria (ex: alimentação)" required />
+        <input type="text" id="categoria" placeholder="Categoria" required />
         <button type="submit">Adicionar Gasto</button>
       </form>
   
